--- a/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
+++ b/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
@@ -15,23 +15,24 @@ endif::[]
 Logical replication allows you to capture and propagate all the data changes from a Postgres database in realtime.
 It is widely used for replication within Postgres clusters, but as the protocol is very well documented and accessible,
 also non-Postgres tools can tap into the replication data stream and leverage it for heterogenous replication pipelines across system boundaries.
-With the help of logical replication clients such as the Debezium connector for Postgres you can propagate changes from your operational database into data warehouses, data lakes, or search indexes, typically with sub-second end-to-end latencies.
+With the help of logical replication clients such as the https://debezium.io/documentation/reference/stable/connectors/postgresql[Debezium connector for Postgres],
+you can propagate changes from your operational database into data warehouses, data lakes, or search indexes, typically with sub-second end-to-end latencies.
 
 <!--more-->
 
-But there are some caveats around logical replication too.
-When not doing things correctly, a replication slot may cause the database to retain more and more WAL segments and ultimately run out of disk space,
-something I've written about here.
-Another common stumbling stone is the specific way of how https://www.postgresql.org/docs/current/storage-toast.html[TOAST (The Oversized-Attribute Storage Technique) columns] are handled by logical replication.
-TOAST is Postgres' way of dealing with large column values:
-if a tuple (the physical representation of a row in a Postgres table) is larger than 2 kilobytes, large column values will be split up into multiple tuples, spread across multiple database pages.
-For each table with TOAST-able column types (for instance, `text` and `bytea`), an associated TOAST table will be created which stores these out-of-line values.
+But logical replication has its quirks, too.
+Besides WAL pile-up caused by inactive replication slots
+(something I've written about link:/blog/insatiable-postgres-replication-slot/[here]),
+one common stumbling stone is the specific way of how TOAST (The Oversized-Attribute Storage Technique) columns are handled by logical replication.
+https://www.postgresql.org/docs/current/storage-toast.html[TOAST] is Postgres' way of dealing with large column values:
+if a tuple (the physical representation of a row in a Postgres table) is larger than 2 kilobytes, large column values will be split up into several tuples, spread across multiple database pages.
+For each table with TOAST-able column types (for instance, `text` and `bytea`), an associated TOAST table will be created for storing these out-of-line values.
 
 Now, how does all that relate to logical replication?
 The answer to this depends on the replica identity configured for a given table.
 Specifically, unless a table has replica identity `FULL` (which isn't always desirable due to the impact on WAL size),
 if a row in that table gets updated,
-logical replication will expose only those TOAST-ed fields whose value has changed.
+logical replication will expose a TOAST-ed field only if its value has changed.
 Whereas no value will be provided for any unchanged TOAST-ed fields.
 This means that the change events created by a CDC tool such as Debezium don't completely describe the current state of that row,
 which makes them more complex to handle for consumers.
@@ -40,97 +41,120 @@ Debezium change events contain a special marker value for unchanged TOAST column
 
 If a change event consumer supports partial updates,
 it can issue specific update queries which exclude any fields with that marker value from updates.
-For an example, refer to https://www.artie.com/blogs/why-toast-columns-break-postgres-cdc-and-how-to-fix-it#how-most-cdc-tools-handle-toast-incorrectly[this post] by Jaqueline Cheong which shows a Snowflake `MERGE` statement for doing so.
+For example, Snowflake lets you do this through https://www.artie.com/blogs/why-toast-columns-break-postgres-cdc-and-how-to-fix-it#how-most-cdc-tools-handle-toast-incorrectly[`MERGE` queries] with a `CASE` clause.
 This is approach isn't ideal for a number of reasons, though.
-It requires the consumer to be aware of the fact that specific columns could be TOAST-able,
-and it would have to have that information for each affected column of each affected table.
+It requires the consumer to be aware of the fact that specific columns are TOAST-able,
+and it needs to have that information for each affected column of each affected table.
 Worse, if there are multiple consumers, each and every one of them will have to implement that logic.
 Finally, not all downstream systems may allow for partial updates to begin with,
 only letting you update entire records at once.
 
-Taking a step back, the underlying problem is that we are leaking implementation details here,
+Taking a step back, the underlying problem is that we are leaking an implementation detail here,
 requiring consumers to deal with something they shouldn't really have to care about.
-Adhering to the motion of Shift Left, a much better approach is to solve that issue on the producer side,
-establishing a consciously designed data contract which shields consumers from intricacies like TOAST columns.
+It would be much better to solve this issue at the producer side,
+establishing a consciously designed https://www.youtube.com/watch?v=8PycG-dOwDE[data contract] which shields consumers from intricacies like TOAST columns.
+Moving this sort of processing closer to the source of a data pipeline ("Shift Left"),
+helps to create reusable data products which are easier to consume,
+without having to reinvent the wheel in every single consumer, be it a data warehouse, datalake, or a search index.
 
-In the remainder of this post I'd like to discuss several techniques for doing exactly that.
+In the remainder of this post I'd like to discuss several techniques for doing exactly that:
+Debezium's built-in solution--column reselects--as well as stateful stream processing with Apache Flink.
 
 ## Debezium Reselect Postprocessor
 
-While Debezium by default will export the `__debezium_unavailable_value` for unchanged TOAST-ed fields for tables with default replica identity,
-it provides some means to improve the situation at least a little bit.
-There is a post processor which will issue a query against the source database to retrieve the current value of the affected field and update the change event with that value before emitting it.
-To set up the post processor, add the following to your connector configuration:
+While Debezium by default exports the `__debezium_unavailable_value` sentinel value for unchanged TOAST-ed fields for tables with default replica identity,
+it provides some means to improve the situation.
+There is a https://debezium.io/documentation/reference/stable/post-processors/reselect-columns.html[post processor] which issues a query against the source database to retrieve the current value of the affected field and update the change event with that value before emitting it.
+To set up the post processor, add the following to your Debezium connector configuration:
 
 [source,json,linenums=true]
 ----
-"connector.class": "io.debezium.connector.postgresql.PostgresConnector",
-...
-"post.processors": "reselector",
-"reselector.type": "io.debezium.processors.reselect.ReselectColumnsPostProcessor",
-"reselector.reselect.columns.include.list": "inventory.authors:biography", # <1>
-"reselector.reselect.unavailable.values": "true",
-"reselector.reselect.null.values" : "false"
+{
+  "connector.class": "io.debezium.connector.postgresql.PostgresConnector",
+  ...
+  "post.processors": "reselector",
+  "reselector.type":
+      "io.debezium.processors.reselect.ReselectColumnsPostProcessor", # <1>
+  "reselector.reselect.columns.include.list":
+      "inventory.authors:biography", # <2>
+  "reselector.reselect.unavailable.values": "true",
+  "reselector.reselect.null.values" : "false"
+}
 ----
-<1> Query missing values for the `biography` column of the `inventory.authors` table
+<1> Enable the column reselect post processor for the events emitted by this connector
+<2> Query missing values for the `biography` column of the `inventory.authors` table
 
 This may do the trick in certain situations, in particular if a TOAST-ed column rarely or even never changes.
 There are some important implications, though:
 The solution is inherently prone to data races.
-If there are multiple updates to a row shortly after another and the TOAST-ed column does get changed,
+If there are multiple updates to a row shortly after another, and the TOAST-ed column actually does get changed,
 an earlier change event may be enriched with the current value of the column,
-as Postgres does not support to query for past value
-(in Oracle, the technique may be implemented more robustly using an `AS OF SCN` query).
-Furthermore, there may be a performance impact: running a query for every event may adds latency and it may impose undesired load onto the source data base,
+as Postgres does not support to query for past values
+(for Oracle, Debezium implements the technique more robustly using an `AS OF SCN` query).
+
+Furthermore, there may be a performance impact: running a query for every event adds latency,
+and it may impose undesired load onto the source data base,
 in particular considering that no batching is applied for these look-ups currently.
 When using the reselect post processor,
 your should make sure to run Debezium close to your database,
 in order to minimize the latency impact.
 
-## DataStream API
+## Flink DataStream API
 
-Flink supports several APIs for implementing stream processing jobs which differ in terms of their complexity and the capabilities they provide.
-The DataStream API is a foundational API which provides you the highest degree of freedom and flexibility,
+As discussed above, issuing a database query for getting the current value of a TOAST-ed column suffers from data races.
+What we'd actually have to do when emitting an update change event is retrieving the column value as it was when that update happened.
+This kind of processing is a prime use case for stateful stream processors such as https://flink.apache.org/[Apache Flink].
+
+Flink supports several APIs for implementing stream processing jobs which differ in terms of their complexity and the capabilities they offer.
+The https://nightlies.apache.org/flink/flink-docs-master/docs/dev/datastream/overview/[DataStream API] is a foundational API which provides you with the highest degree of freedom and flexibility,
 at the same time it has a steep learning curve and you can shoot into your own foot easily.
 
-To implement a backfill of TOAST columns, you'd create a custom processing function which manages the column values in a state store.
-It will put the value into the state store when processing an insert change event,
-and later on, read it back to replace the `__debezium_unavailable_value` marker value in update events which don't modify the TOAST column.
-As the state needs to be managed per record, you need to implement the `KeyedProcessFunction` contract:
+To implement a backfill of TOAST columns, we'll need to create a custom processing function which manages the column values through a persistent https://nightlies.apache.org/flink/flink-docs-master/docs/dev/datastream/fault-tolerance/state/[state store].
+It puts the value into the state store when processing an insert change event,
+and later on, it'll read it back to replace the sentinel value in update events which don't modify the TOAST column.
+
+As the state needs to be managed per record, the `KeyedProcessFunction` contract must be implemented:
 
 [source,java,linenums=true]
 ----
-public class ToastBackfillFunction extends KeyedProcessFunction<Long, KafkaRecord, KafkaRecord> { // <1>
+public class ToastBackfillFunction extends
+    KeyedProcessFunction<Long, KafkaRecord, KafkaRecord> { // <1>
 
-  private static final String UNCHANGED_TOAST_VALUE = "__debezium_unavailable_value";
+  private static final String UNCHANGED_TOAST_VALUE =
+      "__debezium_unavailable_value";
 
-  private final String fieldName;
+  private final String columnName;
   private ValueStateDescriptor<String> descriptor; // <2>
 
-  public ToastBackfillFunction(String toastFieldName) {
-    this.fieldName = toastFieldName;
+  public ToastBackfillFunction(String columnName) {
+    this.columnName = olumnName;
   }
 
   @Override
   public void open(OpenContext openContext) throws Exception {
-    descriptor = new ValueStateDescriptor<String>(fieldName, String.class);  // <3>
+    descriptor = new ValueStateDescriptor<String>(columnName,
+        String.class);  // <3>
   }
 
   @Override
-  public void processElement(KafkaRecord in, Context ctx, Collector<KafkaRecord> out) throws Exception { // <4>
+  public void processElement(KafkaRecord in, Context ctx,
+      Collector<KafkaRecord> out) throws Exception { // <4>
+
     ValueState<String> state = getRuntimeContext().getState(descriptor);
 
-    @SuppressWarnings("unchecked")
-    Map<String, Object> newRowState = (Map<String, Object>) in.value().get("after");
+    Map<String, Object> newRowState =
+        (Map<String, Object>) in.value().get("after");
 
     switch ((String)in.value().get("op")) {
-      case "r", "i" -> state.update((String) newRowState.get(fieldName));  // <5>
+      case "r", "i" ->
+          state.update((String) newRowState.get(columnName)); // <5>
 
       case "u" -> {
-        if (UNCHANGED_TOAST_VALUE.equals(newRowState.get(fieldName))) {  // <6>
-          newRowState.put(fieldName, state.value());
+        if (UNCHANGED_TOAST_VALUE.equals(
+              newRowState.get(columnName))) { // <6>
+          newRowState.put(columnName, state.value());
         } else {
-          state.update((String) newRowState.get(fieldName)); // <7>
+          state.update((String) newRowState.get(columnName)); // <7>
         }
       }
 
@@ -143,7 +167,7 @@ public class ToastBackfillFunction extends KeyedProcessFunction<Long, KafkaRecor
   }
 }
 ----
-<1> This is a keyed process function working on `Long` keys (the primary key type of our table), consuming and emitting Kafka records mapped via Jackson (see the source code repo for the details of these types)
+<1> This is a keyed process function working on `Long` keys (the primary key type of our table), consuming and emitting Kafka records mapped via Jackson
 <2> Descriptor for a key-scoped value store containing the latest value of the TOAST column
 <3> Initialize the state store when the function instance gets created and configured
 <4> The `processElement()` method is invoked for each element on the stream
@@ -157,63 +181,78 @@ The function must be applied to a stream which is keyed by the change event's pr
 
 [source,java,linenums=true]
 ----
-StreamExecutionEnvironment env = StreamExecutionEnvironment.getExecutionEnvironment();
+StreamExecutionEnvironment env =
+    StreamExecutionEnvironment.getExecutionEnvironment();
 
 KafkaSource<KafkaRecord> source = ...;
 KafkaSink<KafkaRecord> sink = ...;
 
 env.fromSource(source, WatermarkStrategy.noWatermarks(), "Kafka Source")
-  .keyBy(k -> {
+  .keyBy(k -> { // <1>
     return Long.valueOf((Integer) k.key().get("id"));
   })
-  .process(new ToastBackfillFunction("biography"))
+  .process(new ToastBackfillFunction("biography")) // <2>
   .sinkTo(sink);
 
 env.execute("Flink TOAST Backfill");
 ----
+<1> Key the incoming change event stream by the table's primary key, `id`
+<2> For each change event, apply the TOAST backfill function
 
-## Flink SQL With `OVER` Aggregation
+The Kafka source shown in the job reads Debezium data change events from a Kafka topic,
+whereas the Kafka sink will write them to another topic, once they have been processed.
+You can find the complete runnable example in my https://github.com/gunnarmorling/streaming-examples/blob/main/postgres-toast-backfill/toast-backfill/src/main/java/dev/morling/demos/partialevents/DataStreamJob.java[streaming-examples repo] on GitHub.
 
-In addition to the DataStream API, Flink also provides a relational interface to stream processing in form of Flink SQL and the accompanying Table API.
-This makes stream processing accessible to a much larger audience:
+## Flink SQL With OVER Aggregation
+
+Besides the DataStream API, Apache Flink also provides a relational interface to stream processing in form of https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/overview/[Flink SQL] and the accompanying Table API.
+This makes stateful stream processing accessible to a much larger audience:
 all the developers and data engineers who are familiar with SQL.
-Can the TOAST column backfill implemented with a SQL query?
-As it turns out, yes it can.
-The key idea is to use Flink's link:/blog/ingesting-debezium-events-from-kafka-with-flink-sql/[Apache Kafka SQL connector in append-only mode] for operating on the "raw" stream of Debezium change events and applying the necessary backfill.
-To do so, an https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql/queries/over-agg/[over aggregation] can be applied like so:
+Which begs the questoin: can the TOAST column backfill implemented with a SQL query?
+As it turns out, yes it can!
+The key idea is to use Flink's link:/blog/ingesting-debezium-events-from-kafka-with-flink-sql/[Apache Kafka SQL connector in append-only mode] for operating on the "raw" stream of Debezium change events and applying the necessary backfill with an https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql/queries/over-agg/[`OVER` aggregation]:
 
 [source,sql,linenums=true]
 ----
-SELECT
-  id,
-  before,
-  ROW(
+INSERT INTO authors_backfilled
+  SELECT
     id,
-    after.first_name,
-    after.last_name,
-    CASE
-      WHEN after.biography IS NULL THEN NULL
-      ELSE
-        LAST_VALUE(NULLIF(after.biography, '__debezium_unavailable_value')) OVER (
-          PARTITION BY id
-          ORDER BY proctime
-          RANGE UNBOUNDED PRECEDING
-        )
-    END,
-    after.dob
-  ),
-  source,
-  op,
-  ts_ms
-FROM
-  authors
+    before,
+    ROW(
+      id,
+      after.first_name,
+      after.last_name,
+      CASE
+        WHEN after.biography IS NULL THEN NULL
+        ELSE
+          LAST_VALUE(NULLIF(after.biography, '__debezium_unavailable_value')) OVER (
+            PARTITION BY id
+            ORDER BY proctime
+            RANGE UNBOUNDED PRECEDING
+          )
+      END,
+      after.dob
+    ),
+    source,
+    op,
+    ts_ms
+  FROM
+    authors
 ----
 
 Unlike a regular `GROUP BY` aggregation which condenses multiple input rows into a single output row,
-an over aggregation produces an aggregated value for every input row.
-The `LAST_VALUE()` aggregation function will propagate the last non `NULL` value for the given group.
+an `OVER` aggregation produces an aggregated value for every input row.
+The `LAST_VALUE()` aggregation function propagates the last non `NULL` value for the given group.
 By mapping the unvailable value placeholder to `NULL` using `NULLIF()`, this will always be the latest value of the biography column.
-By partitioning the data by id, the aggregation happens in the context of each individual row of the input table.
+The data is partitioned by id, so that the aggregation happens in the context of each individual row of the input table.
+The aggregation is wrapped by a `CASE` clause in order to handle the situation where the TOAST-ed column actually is set to `NULL`.
+
+Arguably, SQL has a bit of a discoverability problem,
+and in particular software engineers with a background in application development may not necessarily be aware of features such as `OVER` aggregations,
+which are typically applied for analytical use cases.
+Nevertheless, solving the problem with just a few lines of SQL makes for a very elegant solution,
+especially when considering that Flink SQL tends to be more widely supported by SaaS vendors than the DataStream API,
+due to the inherent complexities of operating the latter.
 
 ## Bonus: Process Table Functions
 
